<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/iv_detail_user"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:siRadius="6dp"
        app:siSquare="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        android:contentDescription="@string/avatar_image"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_name"
        android:text="@string/app_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_username"
        style="@style/TextContent.Title"/>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextContent.Subtitle"/>

    <TextView
        android:id="@+id/tv_followers"
        android:text="@string/followers"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_following"
        style="@style/TextContent.Userdescription"/>

    <TextView
        android:id="@+id/tv_following"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_company"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        style="@style/TextContent.Userdescription"/>

    <TextView
        android:id="@+id/tv_company"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_following"
        app:layout_constraintBottom_toTopOf="@id/tv_location"
        style="@style/TextContent.Userdescription"/>

    <TextView
        android:id="@+id/tv_location"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        app:layout_constraintBottom_toTopOf="@id/tv_repo"
        style="@style/TextContent.Userdescription"/>

    <TextView
        android:id="@+id/tv_repo"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        style="@style/TextContent.Userdescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>