<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:foreground="?selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.github.siyamed.shapeimageview.RoundedImageView
            android:id="@+id/iv_user"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:siRadius="6dp"
            app:siSquare="true"
            app:layout_constraintEnd_toStartOf="@id/tv_username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_username"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/iv_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_id"
            app:layout_constraintStart_toEndOf="@id/iv_user" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/item_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_user"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintBottom_toTopOf="@id/tv_type"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id"
            app:layout_constraintBottom_toBottomOf="@id/iv_user"
            app:layout_constraintStart_toEndOf="@id/iv_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>